rocket-app_v0/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocket-app-deployment
spec:
  selector:
    matchLabels:
      pod_name: rocket-app
  replicas: 1 
  template:
    metadata:
      labels:
        pod_name: rocket-app
    spec:
      containers:
      - name: rocket-app
        image: ratulb/rocket-app_v0:latest
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: rocket-app-service
spec:
  selector:
    pod_name: rocket-app
  type: ClusterIP
  ports:
  - name: rocket-app-service-port
    protocol: TCP
    port: 8080
    targetPort: 8080
