rocket-app_v0/default-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: default-rocket-ingress
spec:
  defaultBackend:
    service:
      name: rocket-app-service
      port: 
        number: 8080
  #ingressClassName: nginx
---
