rocket-app_v0/di.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: ingress
spec:
  #ingressClassName: istio
  rules:
  - http:
      paths:
      - path: /.*
        pathType: ImplementationSpecific #Prefix does not work
        backend:
          service:
            name: rocket-app-service
            port:
              number: 8080
